Added support for CentOS.

--- a/Day3/build-docker-image.yml
+++ b/Day3/build-docker-image.yml
@@ -1,8 +1,17 @@
 - name: Demonstrates building docker image via playbook
   hosts: localhost
   tasks:
-     - name: Install python package installer (pip)
+     - name: Install python package installer (pip) in Ubuntu
+       when: ansible_distribution == Ubuntu
        apt: name=python-pip state=latest update_cache=yes
+
+     - name: Install Extra Packages for Enterprise Linux (EPEL) in CentOS
+       when: ansible_distribution == CentOS
+       yum: name=epel-release state=latest 
+
+     - name: Install python package installer (pip) in CentOS
+       when: ansible_distribution == CentOS
+       yum: name=python-pip state=latest 
 
      - name: Install docker-py module 
        shell: pip install docker-py
